# audit_collector

./: .gitignore  Cargo.toml  Makefile  README.md
src/: collector.rs  lib.rs  main.rs  model.rs  source.rs
src/source/: linux.rs  macos.rs  mock.rs  mod.rs  windows.rs
tests/: integration_test.rs
ui/: package-lock.json  package.json
ui/src/: App.tsx
wix/: main.wxs
