[package]
name = "audit_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
crossbeam-channel = "0.5" # For the ring buffer / queue
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
futures = "0.3.31"
async-stream = "0.3.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_EventLog",
    "Win32_Foundation",
    "Win32_System_Variant",
    "Win32_System_Memory",
    "Win32_Security", 
] }

